pkgs/artifacts-cli/tests/tui/snapshots/tests__tui__integration_tests__unwanted_files_shows_error.snap
---
source: tests/tui/integration_tests.rs
expression: "run_tui(\"unwanted-files\", events)"
---
TestResult {
    before: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        artifacts: [
            ArtifactState {
                target: "unwanted-files",
                name: "test-artifact",
                status: "Pending",
            },
        ],
        error: None,
    },
    after: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        artifacts: [
            ArtifactState {
                target: "unwanted-files",
                name: "test-artifact",
                status: "Failed(\"generator produced extra files for artifact 'test-artifact': [should_not_be_there]\")",
            },
        ],
        error: None,
    },
}
